# stellar-milestone-crowdfunding

./: .gitignore  README.md
contracts/crowdfunding/: Cargo.toml
contracts/crowdfunding/src/: lib.rs  test.rs
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json
frontend/scripts/: test-read.js
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/client/: .gitignore  README.md  package.json  tsconfig.json
frontend/src/client/src/: client.ts  index.ts  types.ts
